--- a/pages/index.html
+++ b/pages/index.html
@@ -6,4 +6,9 @@
 
 {% block body %}
 <p>This is the right side!</p>
+
+<pre id="template-example"></pre>
+
+<script src="js/nunjucks-slim.js"></script>
+<script src="js/index.js"></script>
 {% endblock %}
