--- a/comp/calendar/calendar.html
+++ b/comp/calendar/calendar.html
@@ -1,7 +1,9 @@
 <div class="rvc--calendar">
 	<div class="cal-header">
 		<div class="cal-month">
+			<div class="cal-month-change prev" v-on:click="changeMonth(-1)"></div>
 			{{monthName}} / {{year}}
+			<div class="cal-month-change next" v-on:click="changeMonth(+1)"></div>
 		</div>
 		<div class="cal-week">
 			<div class="cal-day" v-for="day in daysHeader">
