--- a/comp/root/root.html
+++ b/comp/root/root.html
@@ -4,4 +4,5 @@
 	<rvc--page-title></rvc--page-title>
 	<rvc--form-search></rvc--form-search>
 	<rvc--hotels></rvc--hotels>
+	<rvc--footer></rvc--footer>
 </div>
