Filtro de preços funcionando

--- a/comp/hotels/results/item/item.html
+++ b/comp/hotels/results/item/item.html
@@ -1,4 +1,4 @@
-<div class="rvc--hotels--results--item">
+<div class="rvc--hotels--results--item" v-show="show">
 	<div class="hotel-photo" v-bind:style="{backgroundImage:'url('+hotel.image+')'}"></div>
 	<div class="hotel-info">
 		<div class="hotel-rating">
