--- a/web/index.html
+++ b/web/index.html
@@ -25,6 +25,9 @@
 	</script>
 	<script crossorigin src="//unpkg.com/react@16/umd/react.development.js"></script>
 	<script crossorigin src="//unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+	<script crossorigin src="//unpkg.com/redux@4.0.0/dist/redux.min.js"></script>
+	<script crossorigin src="//unpkg.com/react-redux@5.0.7/dist/react-redux.min.js"></script>
+	<script crossorigin src="//unpkg.com/prop-types@15.6.1/prop-types.min.js"></script>
 	<script src="js/libs/buble-browser-deps.umd.js"></script>
 	<!-- <script src="js/libs/react-templates.js"></script> -->
 	<!-- <script src="js/libs/localforage.js"></script> -->
