Redux Básico funcionando

--- a/web/comp/footer/footer.html
+++ b/web/comp/footer/footer.html
@@ -1,15 +1,15 @@
 <div class="bnw--footer">
 	Show:
 	{' '}
-	<bnw--filter-link filter={props.VisibilityFilters.SHOW_ALL}>
+	<bnw-container--filter-link filter={local.VisibilityFilters.SHOW_ALL}>
 		All
-	</bnw--filter-link>
+	</bnw-container--filter-link>
 	{', '}
-	<bnw--filter-link filter={props.VisibilityFilters.SHOW_ACTIVE}>
+	<bnw-container--filter-link filter={local.VisibilityFilters.SHOW_ACTIVE}>
 		Active
-	</bnw--filter-link>
+	</bnw-container--filter-link>
 	{', '}
-	<bnw--filter-link filter={props.VisibilityFilters.SHOW_COMPLETED}>
+	<bnw-container--filter-link filter={local.VisibilityFilters.SHOW_COMPLETED}>
 		Completed
-	</bnw--filter-link>
+	</bnw-container--filter-link>
 </div>
