--- a/web/index.html
+++ b/web/index.html
@@ -38,7 +38,7 @@
 	<script src="js/utils.js"></script>
 	<!-- <script src="js/env.js"></script> -->
 	<!-- <script src="js/services.js"></script> -->
-	<!-- <script src="js/store.js"></script> -->
+	<script src="js/store.js"></script>
 	<script src="js/index.js"></script>
 </body>
 </html>
