--- a/web/comp/link/link.html
+++ b/web/comp/link/link.html
@@ -3,7 +3,7 @@
 : <a class="bnw--link link" href="javascript:;"
 		onClick={function(e) {
 			e.preventDefault();
-			onClick(e);
+			props.onClick(e);
 		}}
 	>
 		{props.children}
