--- a/web/index.html
+++ b/web/index.html
@@ -23,11 +23,12 @@
 		var BNW = BNW || {};
 		BNW.BaseUrl = '';
 	</script>
-	<script crossorigin src="//unpkg.com/react@16/umd/react.development.js"></script>
-	<script crossorigin src="//unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
-	<script crossorigin src="//unpkg.com/redux@4.0.0/dist/redux.min.js"></script>
-	<script crossorigin src="//unpkg.com/react-redux@5.0.7/dist/react-redux.min.js"></script>
-	<script crossorigin src="//unpkg.com/prop-types@15.6.1/prop-types.min.js"></script>
+	<script src="//unpkg.com/core-js-bundle@3.0.0-beta.3/minified.js"></script>
+	<script src="//unpkg.com/react@16/umd/react.development.js"></script>
+	<script src="//unpkg.com/react-dom@16/umd/react-dom.development.js"></script>
+	<script src="//unpkg.com/redux@4.0.0/dist/redux.min.js"></script>
+	<script src="//unpkg.com/react-redux@5.0.7/dist/react-redux.min.js"></script>
+	<script src="//unpkg.com/prop-types@15.6.1/prop-types.min.js"></script>
 	<script src="js/libs/buble-browser-deps.umd.js"></script>
 	<!-- <script src="js/libs/react-templates.js"></script> -->
 	<!-- <script src="js/libs/localforage.js"></script> -->
@@ -36,8 +37,8 @@
 	<!-- <script src="js/libs/vuex.js"></script> -->
 	<!-- <script src="js/libs/vue-text-mask.min.js"></script> -->
 	<script src="js/utils.js"></script>
-	<!-- <script src="js/env.js"></script> -->
-	<!-- <script src="js/services.js"></script> -->
+	<script src="js/env.js"></script>
+	<script src="js/services.js"></script>
 	<script src="js/store.js"></script>
 	<script src="js/index.js"></script>
 </body>
