Falhou porque o Vue compila os templates usando "with(){}" que não é aceito no modo strict dos módulos

--- a/index.html
+++ b/index.html
@@ -15,5 +15,6 @@
 	<p>C6: <span class="c6"></span></p>
 	<p>C8: <span class="c8"></span></p>
 	<script type="module" src="/main.js"></script>
+	<script type="module" src="/comp/foo"></script>
 </body>
 </html>
