--- a/public/template.html
+++ b/public/template.html
@@ -7,39 +7,55 @@
 	<title>Vue Next (v3) example</title>
 	<meta name="description" content="Vue Next (v3) example description" />
 
+	<style>
+		html {
+			font-family: sans-serif;
+			font-size: 16px;
+		}
+	</style>
 	<script>var _app$ = {};</script>
 </head>
 <body>
 	<div id="root"></div>
-	<!-- 
+	<!--
 		Sim, eu sei que não é ideal carregar vários scripts assim
-	 -->
+		Ainda falta escrever uma etapa pra compilar as partes que
+		uso da biblioteca
+	-->
+	<script src="https://unpkg.com/regenerator-runtime@0.13.7/runtime.js"></script>
 	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/isomorphic/utils/for-each.js"></script>
 	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/isomorphic/utils/for-each-property.js"></script>
 	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/isomorphic/utils/inspect.js"></script>
 	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/isomorphic/utils/collection.js"></script>
 	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/isomorphic/utils/extend.js"></script>
+	<script src="/js/lib/isomorphic/utils/listeners.js"></script>
+	<script src="/js/lib/isomorphic/utils/deferred.js"></script>
 	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/isomorphic/printf/parse.js"></script>
 	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/isomorphic/printf/fill.js"></script>
 	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/isomorphic/state/dictionary-static.js"></script>
 	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/isomorphic/printf/index.js"></script>
-	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/isomorphic/loaders/component.js"></script>
-	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/isomorphic/loaders/comp-prefix.js"></script>
+	<script src="/js/lib/isomorphic/loaders/component.js"></script>
+	<script src="/js/lib/isomorphic/loaders/comp-prefix.js"></script>
 	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/isomorphic/loaders/init-vue-loaders.js"></script>
-	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/client/loaders/ajax.js"></script>
-	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/client/loaders/script.js"></script>
-	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/client/loaders/stylesheet.js"></script>
-	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/client/loaders/component.js"></script>
-	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/client/loaders/comp-prefix.js"></script>
+	<script src="/js/lib/client/loaders/ajax.js"></script>
+	<script src="/js/lib/client/loaders/script.js"></script>
+	<script src="/js/lib/client/loaders/stylesheet.js"></script>
+	<script src="/js/lib/client/loaders/component.js"></script>
+	<script src="/js/lib/client/loaders/comp-prefix.js"></script>
 	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/client/loaders/init-vue-loaders.js"></script>
+	<script src="https://unpkg.com/@arijs/frontend@0.2.7/lib/client/dom/pointer-drag.js"></script>
 	<script>
 		var extend = AriJS.isomorphic.utils.extend['default'];
 		var printf = AriJS.isomorphic.printf.index['default'];
 		var loadScript = AriJS.client.loaders.script['default'];
 		var loadStylesheet = AriJS.client.loaders.stylesheet['default'];
 		var loadAjax = AriJS.client.loaders.ajax['default'];
+		loadAjax.typeJson = AriJS.client.loaders.ajax.ajaxTypeJson;
+		var loadAjaxPromise = AriJS.client.loaders.ajax.loadAjaxPromise;
 		var loadComponent = AriJS.client.loaders.component['default'];
 		var prefixMatcher = AriJS.client.loaders['comp-prefix']['default'];
+		var pointerDrag = AriJS.client.dom['pointer-drag']['default'];
+		var deferredPromise = AriJS.isomorphic.utils.deferred.deferredPromise;
 	</script>
 	<!-- <script src="/js/vendor/vue.global.js"></script> -->
 	<script src="https://unpkg.com/vue@next"></script>
